--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "@tauri-apps/api": "^1"
+    "@tauri-apps/api": "^1",
+    "sass": "^1.76.0",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^9.1.1",
     "eslint-plugin-vue": "^9.25.0",
+    "sass-loader": "^14.2.1",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
+    "vite-tsconfig-paths": "^4.3.2",
     "vue-tsc": "^1.8.5"
   }
 }
