--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1",
+    "@types/bun": "^1.1.1",
     "sass": "^1.76.0",
     "vue": "^3.3.4"
   },
@@ -19,6 +20,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^9.1.1",
     "eslint-plugin-vue": "^9.25.0",
+    "glob": "^10.3.12",
     "sass-loader": "^14.2.1",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
