--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tauri-apps/api": "^1",
     "@types/bun": "^1.1.1",
     "sass": "^1.76.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-unicons": "^3.3.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
