--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,13 +5,12 @@ description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "window-hide", "shell-open"] }
+sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+tauri = { version = "1", features = [ "shell-open", "window-hide" ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
