--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ api = { path = "api" }
 migration = { path = "migration" }
 sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 tauri = { version = "1", features = [ "shell-open", "window-hide" ] }
+gtk = { version = "0.15", features = [ "v3_20" ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
