--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,9 +16,17 @@ api = { path = "api" }
 migration = { path = "migration" }
 sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 tauri = { version = "1", features = [ "shell-open", "window-hide" ] }
-gtk = { version = "0.15", features = [ "v3_20" ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+[target.'cfg(unix)'.dependencies]
+gtk = { version = "0.15", features = [ "v3_20" ] }
+
+[target.'cfg(windows)'.dependencies.windows]
+version = "0.39.0"
+features = [
+    "Win32_UI_WindowsAndMessaging",
+]
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
