--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,10 +19,10 @@ tauri = { version = "1", features = [ "shell-open", "window-hide" ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-[target.'cfg(unix)'.dependencies]
+[target."cfg(target_os = \"linux\")".dependencies]
 gtk = { version = "0.15", features = [ "v3_20" ] }
 
-[target.'cfg(windows)'.dependencies.windows]
+[target."cfg(windows)".dependencies.windows]
 version = "0.39.0"
 features = [
     "Win32_UI_WindowsAndMessaging",
