--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls"
 tauri = { version = "1", features = [ "shell-open", "window-hide" ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+log = "0.4.21"
+env_logger = "0.11.3"
 
 [target."cfg(target_os = \"linux\")".dependencies]
 gtk = { version = "0.15", features = [ "v3_20" ] }
