--- a/src-tauri/service/Cargo.toml
+++ b/src-tauri/service/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 entity = { path = "../entity" }
 sea-orm = { version = "0.12" }
+serde = { version = "1", features = ["derive"] }
