--- a/src-tauri/service/Cargo.toml
+++ b/src-tauri/service/Cargo.toml
@@ -8,3 +8,4 @@ entity = { path = "../entity" }
 sea-orm = { version = "0.12" }
 serde = { version = "1", features = ["derive"] }
 futures = "0.3.30"
+log = "0.4.21"
